feat/test: 按鈕圖片元件 (與 header 覆蓋問題待處理

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 <app-header></app-header>
 
+<div class="main-container">
+    <app-img-btn></app-img-btn>
+    <app-img-btn></app-img-btn>
+    <app-img-btn></app-img-btn>
+    <app-img-btn></app-img-btn>
+</div>
