style/test: 1.禁止縮放 2. 圖片按鈕文字寫死 3.header高度 與 清單間距

--- a/src/app/common/button/components/img-btn/img-btn.component.html
+++ b/src/app/common/button/components/img-btn/img-btn.component.html
@@ -1,4 +1,4 @@
 <div class="img-btn">
     <img class="background-img" [src]="imgUrl">
-    <label class="img-btn-text">按鈕文字</label>
+    <label class="img-btn-text">{{ btnText }}</label>
 </div>
