--- a/src/app/common/header/components/header/header.component.html
+++ b/src/app/common/header/components/header/header.component.html
@@ -1,4 +1,5 @@
-<header>
+<header #header>
     <img class="img-header" [src]="headerImageUrl">
     <img class="img-back" src="assets/images/icon/icon_back.png" (click)="back()">
 </header>
+<div class="pedding-box"></div>
