--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 
 <div class="main-container">
-    <app-img-btn></app-img-btn>
-    <app-img-btn></app-img-btn>
-    <app-img-btn></app-img-btn>
-    <app-img-btn></app-img-btn>
+    <app-img-btn [btnText]="'預約空間'"></app-img-btn>
+    <app-img-btn [btnText]="'已借用'"></app-img-btn>
+    <app-img-btn [btnText]="'空間總覽'"></app-img-btn>
+    <app-img-btn [btnText]="'購買方案'"></app-img-btn>
 </div>
