--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    margin-top: 40%;
-    gap: 20px;
+    margin-bottom: 40px;
+    gap: 40px;
 }
 
