--- a/src/app/common/header/components/header/header.component.scss
+++ b/src/app/common/header/components/header/header.component.scss
@@ -1,6 +1,7 @@
 header {
     width: 110%; //背景填滿
     position: fixed;
+    z-index: 100;
     top: -1px;
     left: -1px;
 
@@ -14,4 +15,10 @@ header {
         top: 20px;
         left: 10px;
     }
+}
+
+
+
+.pedding-box {
+    height: 150px;
 }
