feat [登入] google 登入

--- a/src/app/auth/components/login-page/login-page.component.html
+++ b/src/app/auth/components/login-page/login-page.component.html
@@ -1,1 +1,4 @@
-<app-img-btn [imgUrl]="'assets/images/button/btn_google-auth.png'" [btnText]="''"></app-img-btn>
+<app-img-btn 
+    [imgUrl]="'assets/images/button/btn_google-auth.png'" 
+    [btnText]="''" (click)="clickSignIn()">
+</app-img-btn>
