feat: [空間預約] 將 firebase get/post 抽離至 service

--- a/src/app/booking/components/booking-check-form-page/booking-check-form-page.component.html
+++ b/src/app/booking/components/booking-check-form-page/booking-check-form-page.component.html
@@ -33,7 +33,7 @@
     </div>
 
         
-    <img src="assets/images/icon/icon_submit.png" (click)="addData()">
+    <img src="assets/images/icon/icon_submit.png" (click)="submitBooking()">
 
 </div>
 
