--- a/src/app/booking/components/booking-select-type-page/booking-select-type-page.component.html
+++ b/src/app/booking/components/booking-select-type-page/booking-select-type-page.component.html
@@ -7,6 +7,6 @@
     <app-img-btn 
         [imgUrl]="'assets/images/button/button_main.png'" 
         (click)="selectForm('site')"
-        [btnText]="'已借用'">
+        [btnText]="'座位預約'">
     </app-img-btn>
 </div>
