style: [購買方案] 先 切版 出三個樣式

--- a/src/app/payment/components/paid-plan-list/paid-plan-list.component.html
+++ b/src/app/payment/components/paid-plan-list/paid-plan-list.component.html
@@ -1,2 +1,63 @@
-paid plan list 頁面待補充
 
+<div class="main-container">
+
+    <div class="pay-plan-list">
+        
+        <div class="pay-plan-item">
+            <div class="pay-plan-title">
+                <img src="/assets/images/icon/icon_check_no.png">
+                <label>小型工作室</label>
+            </div>
+            <div class="pay-plan-content">
+                <div class="row">50空間</div>
+                <div class="row">
+                    <input type="radio" name="studio" id="pay-month">
+                    <label for="pay-month">月繳 1500/月</label>
+                </div>
+                <div class="row">
+                    <input type="radio" name="studio" id="pay-year">
+                    <label for="pay-year">年繳 15000/月</label>
+                </div>
+            </div>
+        </div>
+        
+        <div class="pay-plan-item">
+            <div class="pay-plan-title">
+                <img src="/assets/images/icon/icon_check_no.png">
+                <label>成長中團隊</label>
+            </div>
+            <div class="pay-plan-content">
+                <div class="row">150空間</div>
+                <div class="row">
+                    <input type="radio" name="studio" id="pay-month">
+                    <label for="pay-month">月繳 1500/月</label>
+                </div>
+                <div class="row">
+                    <input type="radio" name="studio" id="pay-year">
+                    <label for="pay-year">年繳 15000/月</label>
+                </div>
+            </div>
+        </div>
+        
+        <div class="pay-plan-item">
+            <div class="pay-plan-title">
+                <img src="/assets/images/icon/icon_check_no.png">
+                <label>大型組織企業</label>
+            </div>
+            <div class="pay-plan-content">
+                <div class="row">300空間</div>
+                <div class="row">
+                    <input type="radio" name="studio" id="pay-month">
+                    <label for="pay-month">月繳 1500/月</label>
+                </div>
+                <div class="row">
+                    <input type="radio" name="studio" id="pay-year">
+                    <label for="pay-year">年繳 15000/月</label>
+                </div>
+            </div>
+        </div>
+
+        <img src="/assets/images/icon/icon_next.png" (click)="routeToECPayForm()">
+
+    </div>    
+</div>
