--- a/src/app/home/components/home-page/home-page.component.html
+++ b/src/app/home/components/home-page/home-page.component.html
@@ -2,5 +2,5 @@
     <app-img-btn [imgUrl]="'assets/images/button/button_main.png'" [routerLink]="'/booking-date'" [btnText]="'預約空間'"></app-img-btn>
     <app-img-btn [imgUrl]="'assets/images/button/button_main.png'" [btnText]="'已借用'"></app-img-btn>
     <app-img-btn [imgUrl]="'assets/images/button/button_main.png'" [routerLink]="'/review-room-overview'" [btnText]="'空間總覽'"></app-img-btn>
-    <app-img-btn [imgUrl]="'assets/images/button/button_main.png'" [btnText]="'購買方案'"></app-img-btn>
+    <app-img-btn [imgUrl]="'assets/images/button/button_main.png'" [routerLink]="'/pay-plan-list'" [btnText]="'購買方案'"></app-img-btn>
 </div>
