feat [購買方案] 勾選簡易判斷 (後續需改為 FormGroup)

--- a/src/app/payment/components/paid-plan-list/paid-plan-list.component.html
+++ b/src/app/payment/components/paid-plan-list/paid-plan-list.component.html
@@ -5,17 +5,17 @@
         
         <div class="pay-plan-item">
             <div class="pay-plan-title">
-                <img src="/assets/images/icon/icon_check_no.png">
+                <img [src]="iconUrl1" (click)="_selectPlanType(palnTypeModel.studio)">
                 <label>小型工作室</label>
             </div>
             <div class="pay-plan-content">
                 <div class="row">50空間</div>
                 <div class="row">
-                    <input type="radio" name="studio" id="pay-month">
+                    <input type="radio" name="studio" id="pay-month" (click)="_selectPlanTimeType(palnTypeModel.studio, planTimeTypeModel.month)">
                     <label for="pay-month">月繳 1500/月</label>
                 </div>
                 <div class="row">
-                    <input type="radio" name="studio" id="pay-year">
+                    <input type="radio" name="studio" id="pay-year" (click)="_selectPlanTimeType(palnTypeModel.studio, planTimeTypeModel.year)">
                     <label for="pay-year">年繳 15000/月</label>
                 </div>
             </div>
@@ -23,17 +23,17 @@
         
         <div class="pay-plan-item">
             <div class="pay-plan-title">
-                <img src="/assets/images/icon/icon_check_ok.png">
+                <img [src]="iconUrl2" (click)="_selectPlanType(palnTypeModel.group)">
                 <label>成長中團隊</label>
             </div>
             <div class="pay-plan-content">
                 <div class="row">150空間</div>
                 <div class="row">
-                    <input type="radio" name="studio" id="pay-month">
+                    <input type="radio" name="group" id="pay-month" (click)="_selectPlanTimeType(palnTypeModel.group, planTimeTypeModel.month)">
                     <label for="pay-month">月繳 4000/月</label>
                 </div>
                 <div class="row">
-                    <input type="radio" name="studio" id="pay-year">
+                    <input type="radio" name="group" id="pay-year" (click)="_selectPlanTimeType(palnTypeModel.group, planTimeTypeModel.year)">
                     <label for="pay-year">年繳 41000/月</label>
                 </div>
             </div>
@@ -41,17 +41,17 @@
         
         <div class="pay-plan-item">
             <div class="pay-plan-title">
-                <img src="/assets/images/icon/icon_check_no.png">
+                <img [src]="iconUrl3" (click)="_selectPlanType(palnTypeModel.enterprise)">
                 <label>大型組織企業</label>
             </div>
             <div class="pay-plan-content">
                 <div class="row">300空間</div>
                 <div class="row">
-                    <input type="radio" name="studio" id="pay-month">
+                    <input type="radio" name="studio" id="pay-month" (click)="_selectPlanTimeType(palnTypeModel.enterprise, planTimeTypeModel.month)">
                     <label for="pay-month">月繳 6000/月</label>
                 </div>
                 <div class="row">
-                    <input type="radio" name="studio" id="pay-year">
+                    <input type="radio" name="studio" id="pay-year" (click)="_selectPlanTimeType(palnTypeModel.enterprise, planTimeTypeModel.year)">
                     <label for="pay-year">年繳 60000/月</label>
                 </div>
             </div>
