--- a/src/app/payment/components/paid-plan-list/paid-plan-list.component.scss
+++ b/src/app/payment/components/paid-plan-list/paid-plan-list.component.scss
@@ -1,4 +1,10 @@
 
+input[type="radio"] {
+    accent-color: #661983;
+    border:2px solid #661983;
+    border-radius: 50%;
+}
+
 .main-container {
     width: 100%;
     display: flex;
