--- a/src/app/review-booking/components/review-booking-form/review-booking-form.component.html
+++ b/src/app/review-booking/components/review-booking-form/review-booking-form.component.html
@@ -1,8 +1,9 @@
-<p>檢視借用</p>
+
+
 
 
 <div class="form-container">
-
+    <div class="title">取消借用</div>
     <div class="form">
         <div class="row">
             <label>申請人</label>
