--- a/src/app/review-booking/components/review-booking-calendar/review-booking-calendar.component.scss
+++ b/src/app/review-booking/components/review-booking-calendar/review-booking-calendar.component.scss
@@ -1,6 +1,7 @@
 
 .container {
     display: flex;
+    width: 100%;
     height: 450px;
     flex-direction: column;
     justify-content: space-between;
@@ -10,6 +11,12 @@
 
 img {
     width: 40px;
+}
+
+.title {
+    color: #661983;
+    font-size: 25px;
+    padding: 10px;
 }
 
 .calendar-picker {
