--- a/src/app/review-booking/components/review-booking-form/review-booking-form.component.scss
+++ b/src/app/review-booking/components/review-booking-form/review-booking-form.component.scss
@@ -1,15 +1,20 @@
 
 
 .form-container {
-    max-width: 800px;
-    min-width: 350px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+.title {
+    color: #661983;
+    font-size: 25px;
+    padding: 10px;
+}
+
 .form {
-    width: 80%;
+    width: 350px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
