feat [購買方案] 攜帶參數方式優化

--- a/src/app/payment/components/paid-plan-list/paid-plan-list.component.html
+++ b/src/app/payment/components/paid-plan-list/paid-plan-list.component.html
@@ -11,11 +11,11 @@
             <div class="pay-plan-content">
                 <div class="row">50空間</div>
                 <div class="row">
-                    <input type="radio" name="studio" id="pay-month" (click)="_selectPlanTimeType(palnTypeModel.studio, planTimeTypeModel.month)">
+                    <input type="radio" name="radio" id="pay-month" (click)="_selectPlanTimeType(palnTypeModel.studio, planTimeTypeModel.month)">
                     <label for="pay-month">月繳 1500/月</label>
                 </div>
                 <div class="row">
-                    <input type="radio" name="studio" id="pay-year" (click)="_selectPlanTimeType(palnTypeModel.studio, planTimeTypeModel.year)">
+                    <input type="radio" name="radio" id="pay-year" (click)="_selectPlanTimeType(palnTypeModel.studio, planTimeTypeModel.year)">
                     <label for="pay-year">年繳 15000/月</label>
                 </div>
             </div>
@@ -29,11 +29,11 @@
             <div class="pay-plan-content">
                 <div class="row">150空間</div>
                 <div class="row">
-                    <input type="radio" name="group" id="pay-month" (click)="_selectPlanTimeType(palnTypeModel.group, planTimeTypeModel.month)">
+                    <input type="radio" name="radio" id="pay-month" (click)="_selectPlanTimeType(palnTypeModel.group, planTimeTypeModel.month)">
                     <label for="pay-month">月繳 4000/月</label>
                 </div>
                 <div class="row">
-                    <input type="radio" name="group" id="pay-year" (click)="_selectPlanTimeType(palnTypeModel.group, planTimeTypeModel.year)">
+                    <input type="radio" name="radio" id="pay-year" (click)="_selectPlanTimeType(palnTypeModel.group, planTimeTypeModel.year)">
                     <label for="pay-year">年繳 41000/月</label>
                 </div>
             </div>
@@ -47,11 +47,11 @@
             <div class="pay-plan-content">
                 <div class="row">300空間</div>
                 <div class="row">
-                    <input type="radio" name="studio" id="pay-month" (click)="_selectPlanTimeType(palnTypeModel.enterprise, planTimeTypeModel.month)">
+                    <input type="radio" name="radio" id="pay-month" (click)="_selectPlanTimeType(palnTypeModel.enterprise, planTimeTypeModel.month)">
                     <label for="pay-month">月繳 6000/月</label>
                 </div>
                 <div class="row">
-                    <input type="radio" name="studio" id="pay-year" (click)="_selectPlanTimeType(palnTypeModel.enterprise, planTimeTypeModel.year)">
+                    <input type="radio" name="radio" id="pay-year" (click)="_selectPlanTimeType(palnTypeModel.enterprise, planTimeTypeModel.year)">
                     <label for="pay-year">年繳 60000/月</label>
                 </div>
             </div>
