refactor [dialog] 三處引用 dialog: 1.趨勢時段 2.空間類型 3.剩餘比率

--- a/src/app/common/dialog/components/dialog/dialog.component.scss
+++ b/src/app/common/dialog/components/dialog/dialog.component.scss
@@ -37,10 +37,10 @@
         height: 80%;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: center;
         .row {            
             color: #661983;
-            padding: 5px; 
+            padding: 10px; 
             font-size: 25px;
         }
     }
