--- a/src/app/review-room/components/review-room-detail/review-room-detail.component.scss
+++ b/src/app/review-room/components/review-room-detail/review-room-detail.component.scss
@@ -24,7 +24,7 @@
 
     label {
         color: #661983;
-        margin-right: 30px;
+        margin-right: 10px;
     }
 
     .title {     
@@ -69,7 +69,9 @@
 
 
 
-
+.dialog-container {
+    z-index: 91;
+}
 
 
 
