refactor [DB] [空間預約] [已借用] 取用資料DB 資料結構修改 UserTest 改 User

--- a/src/app/booking/components/booking-check-form-page/booking-check-form-page.component.html
+++ b/src/app/booking/components/booking-check-form-page/booking-check-form-page.component.html
@@ -4,7 +4,7 @@
     <div class="form">
         <div class="row">
             <label>申請人</label>
-            <div class="select-item">阿翔</div>
+            <div class="select-item"> {{ currentUser.email }} </div>
         </div>
     
         <div class="row">
