feat [空間預約] [教室] 1.新增教室 dialog, 2.教室資料結構 3.model + new constructor

--- a/src/app/booking/components/booking-check-form-page/booking-check-form-page.component.html
+++ b/src/app/booking/components/booking-check-form-page/booking-check-form-page.component.html
@@ -21,7 +21,7 @@
         
         <div class="row">
             <label>教室</label>
-            <div class="select-item">智慧教室</div>
+            <div class="select-item" (click)="isHiddenDialogRoom=false" >{{ selectRoom.name }}</div>
             <img src="assets/images/icon/icon_map_position.png" (click)="selectMap()">
         </div>
         
@@ -34,6 +34,16 @@
 
         
     <img src="assets/images/icon/icon_submit.png" (click)="submitBooking()">
+
+    <!-- dialog 選擇教室 -->
+    <div class="dialog-container">
+        <app-dialog 
+            (selectedItem)="selectedRoom($event)"
+            [isHiddenDialog]="isHiddenDialogRoom"
+            (hideDialog)="isHiddenDialogRoom=true"
+            [itemList]="dialogRoomList">
+        </app-dialog>
+    </div>
 
 </div>
 
