--- a/src/app/home/components/home-page/home-page.component.html
+++ b/src/app/home/components/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="home-list-container">
-    <app-img-btn [imgUrl]="'assets/images/button/button_main.png'" [routerLink]="'/booking-date'" [btnText]="'預約空間'"></app-img-btn>
-    <app-img-btn [imgUrl]="'assets/images/button/button_main.png'" [routerLink]="'/review-booking-calendar'" [btnText]="'已借用'"></app-img-btn>
-    <app-img-btn [imgUrl]="'assets/images/button/button_main.png'" [routerLink]="'/review-room-overview'" [btnText]="'空間總覽'"></app-img-btn>
-    <app-img-btn [imgUrl]="'assets/images/button/button_main.png'" [routerLink]="'/pay-plan-list'" [btnText]="'購買方案'"></app-img-btn>
+    <app-img-btn [imgUrl]="'assets/images/button/button_main.png'" [btnText]="'預約空間'"   (click)="nextPage('/booking-date')"></app-img-btn>
+    <app-img-btn [imgUrl]="'assets/images/button/button_main.png'" [btnText]="'已借用'"     (click)="nextPage('/review-booking-calendar')"></app-img-btn>
+    <app-img-btn [imgUrl]="'assets/images/button/button_main.png'" [btnText]="'空間總覽'"   (click)="nextPage('/review-room-overview')"></app-img-btn>
+    <app-img-btn [imgUrl]="'assets/images/button/button_main.png'" [btnText]="'購買方案'"   (click)="nextPage('/pay-plan-list')"></app-img-btn>
 </div>
