style: 1.登入頁 logo 2.行事曆間距 3.header間距

--- a/src/app/auth/components/login-page/login-page.component.html
+++ b/src/app/auth/components/login-page/login-page.component.html
@@ -1,4 +1,7 @@
-<app-img-btn 
-    [imgUrl]="'assets/images/button/btn_google-auth.png'" 
-    [btnText]="''" (click)="clickSignIn()">
-</app-img-btn>
+<div class="container">
+    <img class="logo-img" src="/assets/images/logo/logo.png">
+    <app-img-btn 
+        [imgUrl]="'assets/images/button/btn_google-auth.png'" 
+        [btnText]="''" (click)="clickSignIn()">
+    </app-img-btn>
+</div>
