--- a/src/app/booking/components/booking-check-form-page/booking-check-form-page.component.scss
+++ b/src/app/booking/components/booking-check-form-page/booking-check-form-page.component.scss
@@ -27,7 +27,7 @@
         align-items: center;
         padding: 10px;
 
-        label {
+        .row-txt {
             color: #661983;
             margin-right: 30px;
             font-size: 25px;
