--- a/src/app/common/dialog/components/dialog/dialog.component.scss
+++ b/src/app/common/dialog/components/dialog/dialog.component.scss
@@ -32,6 +32,7 @@
     justify-content: center;
     align-items: center;
     padding: 5px;
+    padding: 20px;
 
     .dialog-content {
         height: 80%;
