style [預約空間] form表單 使用 pipe 調整超出字元

--- a/src/app/booking/components/booking-check-form-page/booking-check-form-page.component.html
+++ b/src/app/booking/components/booking-check-form-page/booking-check-form-page.component.html
@@ -4,7 +4,7 @@
     <div class="form">
         <div class="row">
             <div class="row-txt">申請人</div>
-            <div class="select-item" (click)="isHiddenDialogUserInfo=false"> {{ currentUser.email }} </div>
+            <div class="select-item" (click)="isHiddenDialogUserInfo=false"> {{ currentUser.email | wordShroten:8 }} </div>
         </div>
     
         <div class="row">
