--- a/src/app/common/time/component/calendar-picker/calendar-picker.component.scss
+++ b/src/app/common/time/component/calendar-picker/calendar-picker.component.scss
@@ -42,11 +42,18 @@
                     border-radius: 100%;
                 }
 
-                .dot {
-                    width: 4px;
-                    height: 4px;
-                    background: #661983;
-                    border-radius: 100%;                    
+                .dot-bar {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    gap: 1px;
+                    .dot {
+                        width: 4px;
+                        height: 4px;
+                        background: #661983;
+                        border-radius: 100%;                    
+                    }
                 }
             }
         }
