fix: [空間預約] dot  因 dotList 重複取資料,造成計算錯誤 ="=

--- a/src/app/common/time/component/calendar-picker/calendar-picker.component.html
+++ b/src/app/common/time/component/calendar-picker/calendar-picker.component.html
@@ -25,10 +25,8 @@
                             {{ i + 1 - currentMonthFirstDayWeekly }}
                     </div>
                     <div class="dot-bar">
-                        <div class="dot" 
-                            [ngStyle]="{background: '#661983'}"
-                            *ngFor="let dotNumber of [].constructor(countDot(i + 1 - currentMonthFirstDayWeekly))">
-                        </div> 
+                        <div class="dot" *ngFor="let i of [].constructor(countDot(i + 1 - currentMonthFirstDayWeekly))">
+                        </div>
                     </div>
             </div>
         </div>
