style [預約空間] 行事曆 dot 依照 [教室/座位] 預約分辨顏色

--- a/src/app/common/time/component/calendar-picker/calendar-picker.component.html
+++ b/src/app/common/time/component/calendar-picker/calendar-picker.component.html
@@ -25,7 +25,9 @@
                             {{ i + 1 - currentMonthFirstDayWeekly }}
                     </div>
                     <div class="dot-bar">
-                        <div class="dot" *ngFor="let i of [].constructor(countDot(i + 1 - currentMonthFirstDayWeekly))">
+                        <div class="dot" 
+                            *ngFor="let i of [].constructor(countDot(i + 1 - currentMonthFirstDayWeekly))"
+                            [ngStyle]="{background: checkDotColor()}">
                         </div>
                     </div>
             </div>
