style [預約空間] [選擇時間] 時鐘, 切版 [開始/結束] 時間

--- a/src/app/booking/components/booking-clock-page/booking-clock-page.component.html
+++ b/src/app/booking/components/booking-clock-page/booking-clock-page.component.html
@@ -1,5 +1,10 @@
 
 <div class="clock-page-container">
+
+    <app-input [inputTitle]="'開始時間:'" [inputContent]="selectStartTime"></app-input>
+    <app-input [inputTitle]="'結束時間:'" [inputContent]="selectStartTime"></app-input>
+
+
     <div class="clock-paicker">
         <div class="clock-header">
             <div (click)="selectHour()" [ngClass]="{ 'selected': isSelectHour }">{{ getHourString() }}</div>
