--- a/src/app/booking/components/booking-date-page/booking-date-page.component.html
+++ b/src/app/booking/components/booking-date-page/booking-date-page.component.html
@@ -1,6 +1,8 @@
 
 <div class="container">
-    <app-calendar-picker (selectDatInfo)="updateSelectDay($event)">
+    <app-calendar-picker 
+        (selectDatInfo)="updateSelectDay($event)" 
+        (selectDayAllBookingRecord)="updateBookingRecord($event)">
     </app-calendar-picker>
     <img src="assets/images/icon/icon_next.png" (click)="nextStep()">
 </div>
