--- a/src/app/booking/components/booking-check-form-page/booking-check-form-page.component.html
+++ b/src/app/booking/components/booking-check-form-page/booking-check-form-page.component.html
@@ -12,10 +12,10 @@
         </div>
         <div class="row-time">
             <div>
-                {{ selectDate }}  {{ selectDay }} {{ selectTime }}
+                {{ selectDate }}  {{ selectDay }} {{ startTime }}
             </div>
             <div>
-                {{ selectDate }}  {{ selectDay }}  {{ selectTime }}
+                {{ selectDate }}  {{ selectDay }}  {{ endTime }}
             </div>
         </div>
         
