--- a/src/app/common/input/components/input/input.component.scss
+++ b/src/app/common/input/components/input/input.component.scss
@@ -13,11 +13,21 @@
     }
 
     .select-item {
-        color: #661983;
-        font-size: 20px;         
+        color: #661983;         
         background: #FBE0FF;
+        font-size: 20px;
         padding: 10px 30px;
         border-radius: 100px;
         margin-right: 15px;
+    }
+
+    ._selected {
+        color: #FBE0FF;         
+        background: #661983;
+    }
+
+    ._not_selected {
+        color: #661983;         
+        background: #FBE0FF;
     }
 }
