--- a/src/app/review-booking/components/review-booking-calendar/review-booking-calendar.component.scss
+++ b/src/app/review-booking/components/review-booking-calendar/review-booking-calendar.component.scss
@@ -1,74 +1,14 @@
 
 .container {
     display: flex;
-    width: 100%;
     height: 450px;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 50px 0;
+    padding: 20px 0;
 }
 
-img {
-    width: 40px;
+.dialog-container {
+    z-index: 91;
 }
 
-.title {
-    color: #661983;
-    font-size: 25px;
-    padding: 10px;
-}
-
-.calendar-picker {
-    width: 350px;
-    .calendar-header {                
-        background: #661983;
-        color: white;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 15px;
-        font-size: 20px;
-    }
-
-    .calendar-content {
-        .grid-row {
-            display: flex;
-            justify-content: flex-start;
-            flex-wrap: wrap;
-
-            .grid {                
-                width: 14%;
-                //height: 40px;
-                text-align: center; /* 文本水平居中 */
-                padding: 12px 0;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-                align-items: center;
-
-                .no-selected {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-
-                    width: 35px;
-                    height: 35px;
-                }
-
-                .selected {
-                    background: #661983;
-                    color: white;
-                    border-radius: 100%;
-                }
-
-                .dot {
-                    width: 4px;
-                    height: 4px;
-                    background: #661983;
-                    border-radius: 100%;                    
-                }
-            }
-        }
-    }
-}
