fix [已預約] 1.切換行事曆 [行事曆] 初始/上/下月 取消 emit。 2.[預約空間] [時鐘] 卡控

--- a/src/app/review-booking/components/review-booking-form/review-booking-form.component.html
+++ b/src/app/review-booking/components/review-booking-form/review-booking-form.component.html
@@ -1,7 +1,5 @@
 
 
-
-
 <div class="form-container">
     <div class="form">
         <div class="row">
@@ -14,10 +12,10 @@
         </div>
         <div class="row-time">
             <div>
-                {{ selectDate }} {{ selectDay }} {{ selectTime }}
+                {{ selectDate }} {{ selectDay }} {{ startTime }}
             </div>
             <div>
-                {{ selectDate }} {{ selectDay }} {{ selectTime }}
+                {{ selectDate }} {{ selectDay }} {{ endTime }}
             </div>
         </div>
 
