--- a/src/app/common/dialog/components/dialog/dialog.component.html
+++ b/src/app/common/dialog/components/dialog/dialog.component.html
@@ -7,7 +7,11 @@
         <div class="dialog">
 
             <div class="dialog-content">
-                <div class="row" *ngFor="let item of itemList"  (click)="clickItem(item)" > {{ item }}</div>
+                <div class="row" 
+                    *ngFor="let item of itemList"  
+                    (click)="clickItem(item.id)" > 
+                        {{ item.name }}
+                </div>
             </div>
 
            <!--  按鈕待優化
