feat [空間預約/已預約] 之 [表單], 日期轉星期, 改為 pipe, 精簡 component

--- a/src/app/review-booking/components/review-booking-form/review-booking-form.component.html
+++ b/src/app/review-booking/components/review-booking-form/review-booking-form.component.html
@@ -12,10 +12,10 @@
         </div>
         <div class="row-time">
             <div>
-                {{ selectDate }} {{ selectDay }} {{ startTime }}
+                {{ selectDate }} {{ selectDate | dateToDayOfWeek:"tw" }} {{ startTime }}
             </div>
             <div>
-                {{ selectDate }} {{ selectDay }} {{ endTime }}
+                {{ selectDate }} {{ selectDate | dateToDayOfWeek:"tw" }} {{ endTime }}
             </div>
         </div>
 
