style ui/ux 1.header title 優化 2.dialog 樣式優化

--- a/src/app/booking/components/booking-check-form-page/booking-check-form-page.component.html
+++ b/src/app/booking/components/booking-check-form-page/booking-check-form-page.component.html
@@ -38,6 +38,7 @@
     <!-- dialog 選擇教室 -->
     <div class="dialog-container">
         <app-dialog 
+            [dialogTitle]="'選擇教室'"
             (selectedItem)="selectedRoom($event)"
             [isHiddenDialog]="isHiddenDialogRoom"
             (hideDialog)="isHiddenDialogRoom=true"
@@ -48,6 +49,7 @@
     <!-- dialog 使用者資訊 -->
     <div class="dialog-container">
         <app-dialog 
+            [dialogTitle]="'使用者資訊'"
             [isHiddenDialog]="isHiddenDialogUserInfo"
             (hideDialog)="isHiddenDialogUserInfo=true"
             [itemList]="dialogUserInfo">
