feat loading mask 資料載入時, 顯示 loading 畫面 scope: [空間總覽]

--- a/src/app/review-room/components/review-room-overview/review-room-overview.component.html
+++ b/src/app/review-room/components/review-room-overview/review-room-overview.component.html
@@ -36,5 +36,12 @@
          [itemList]="dialogChartTimeItem">
         </app-dialog>
     </div>
+
+    <!-- 取趨勢資料時, 顯示 loading -->
+    <div class="loading-container">
+        <app-loading-basic
+            [isLoading]="isLoading">
+        </app-loading-basic>
+    </div>
     
 </div>
