feat [空間總覽] [剩餘空間] 抽出service, 定義假資料格式

--- a/src/app/review-room/components/review-room-detail/review-room-detail.component.html
+++ b/src/app/review-room/components/review-room-detail/review-room-detail.component.html
@@ -61,8 +61,8 @@
                                      *ngIf="i + 1 > currentMonthFirstDayWeekly">
                                         {{ i + 1 - currentMonthFirstDayWeekly }}
                                 </div>
-                                <div *ngIf="isShowRate( currentMonthRoomRemainingRoomRate[i] )" class="rate">
-                                    {{ currentMonthRoomRemainingRoomRate[i] }} %
+                                <div class="rate">
+                                    {{ isShowRate(i + 1 - currentMonthFirstDayWeekly) }} 
                                 </div>
                         </div>
                     </div>
